# b2b-marketplace-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: check_codestyle.yaml  check_migrations.yaml  deploy_stage.yaml  run_tests.yaml
apps/baskets/: admin.py  apps.py  factories.py  models.py  permissions.py  urls.py  views.py
apps/baskets/migrations/: 0001_initial.py  0002_basket_basket_products_alter_basketproduct_basket.py  0003_alter_basket_basket_products.py  0004_alter_basket_user.py
apps/baskets/serializers/: basketproducts.py  baskets.py
apps/baskets/tests/: conftest.py  test_01_baskets.py
apps/core/: apps.py  decorators.py  models.py  routers.py  schema_utils.py  utils.py
apps/deliveries/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
apps/deliveries/migrations/: 0001_initial.py  0002_alter_delivery_order.py
apps/deliveries/serializers/: deliveries.py  deliverymethods.py
apps/orders/: admin.py  factories.py  filters.py  models.py  permissions.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_order_products_alter_orderproduct_order.py  0003_alter_orderproduct_discount.py  0004_alter_orderproduct_discount.py  0005_alter_order_user.py  0006_remove_orderproduct_discount_orderproduct_price_and_more.py
apps/orders/serializers/: orderproducts.py  orders.py
apps/orders/tests/: conftest.py  test_00_create_order.py  test_01_supplier_orders.py  utils.py
apps/products/: admin.py  factories.py  filters.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
apps/products/factories/: factories.py
apps/products/migrations/: 0001_initial.py  0002_alter_product_video.py  (+6 more)
apps/users/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  validators.py  views.py
b2b_marketplace_backend/: asgi.py  settings.py  urls.py  wsgi.py
config/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: db.dbml  git.md  openapi.yml
docs/git_memo/: readme.md
docs/poetry_and_pre-commit_memo/: readme.md
infra/: .env.example  Dockerfile.dev  Dockerfile.stage  docker-compose-postgres.dev.yml  docker-compose.dev.yml  docker-compose.stage.yaml  docker-compose.yml
infra/fail2ban/: diable_all_jails.local
infra/nginx/: default.conf  nginx.stage.conf
(+35 files in other folders)
