[tool.poetry]
name = "b2b-marketplace-backend"
version = "0.1.0"
description = ""
authors = ["b2b marketplace team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
